# -cn.fmsoft.hybridos.settings

./: .gitignore  CMakeLists.txt  inetd.cfg
include/: hibus_template.h  hibus_wifi.h  inetd.h  user_define.h  wifi_intf.h
inetd/: CMakeLists.txt
inetd/include/: inetd.h  user_define.h
inetd/src/: CMakeLists.txt
inetd/src/inetd/: CMakeLists.txt  common.c  inetd.cfg  main.c  mobile.h  tools.c  tools.h  wifi.c
inetd/src/test/: hiBus.js  hiBus_Webkit.js  hiBus_cloud.js  test.html
inetd/src/wifi/: CMakeLists.txt  wifi.c
inetd/src/wifimanager/: CMakeLists.txt  network_manager.c  wifi.c  wifimanager.c
src/: CMakeLists.txt  Makefile  inetd.cfg  main.c  template.c  wifi.c
src/inetd/: CMakeLists.txt  common.c  ethernet.c  ethernet.h  inetd.cfg  main.c  mobile.c  mobile.h  tools.c  tools.h  wifi.c  wifi.h
src/test/: aaa.html  hiBus.js  main.c
src/wifi/: CMakeLists.txt  wifi.c
src/wifimanager/: network_manager.c  udhcpc_thread.c  wifi.c  wifi_event.c  wifi_state_machine.c  wifimanager.c
src/wifimanager/include/: wifi_intf.h
test/: Makefile  main.c
wifimanager/demo/: command  wifi_add_network.c  wifi_connect_ap.cpp  wifi_connect_ap_with_netid.c  wifi_connect_chinese_ap.c  wifi_get_netid.c  wifi_list_networks.c  wifi_longtime_test.c  wifi_on_off_test.c  wifi_remove_all_networks.c  wifi_remove_network.c  wifi_scan_results.c
wifimanager/src/: wifi.c  wifi_event.c  wifimanager.c  wpa_supplicant_conf.c
